@@ -1,36 +1,3 @@
-LWJGL 3.3.3 modified for PojavLauncher Android and iOS.
-This branch also integrates [lwjglx](https://github.com/grum/lwjglx), allowing Minecraft 1.12.2 and older to run on this LWJGL version.
-
-![Build lwjgl3](https://github.com/PojavLauncherTeam/lwjgl3/workflows/Build%20lwjgl3/badge.svg)
-
-### Building
-
-Output: `bin/RELEASE` (Java); `bin/out` (natives)
-
-#### Android
-
-Dependencies:
-
-- ant
-
-Your default `java` version should be java 8.
-
-```bash
-export ANDROID_NDK_HOME=/path/to/ndk-bundle
-
-# Valid archs: arm64, arm32, x64, x86. Only set one at a time
-export LWJGL_BUILD_ARCH=arm64
-export JAVA8_HOME=/path/to/java8
-
-bash ci_build_android.bash
-```
-
-#### iOS
-
-Just run `bash ci_build_ios.bash` on macOS
-
----
-
 [![Maven Central](https://img.shields.io/maven-central/v/org.lwjgl/lwjgl.svg?label=maven%20central)](https://search.maven.org/search?q=g:org.lwjgl)
 [![API Javadoc](https://img.shields.io/badge/API-docs-blue.svg)](https://javadoc.lwjgl.org/)
 [![License](https://img.shields.io/badge/license-BSD-blue.svg?colorB=lightgray)](https://github.com/LWJGL/lwjgl3/blob/master/LICENSE.md)
@@ -57,7 +24,7 @@ LWJGL is open source software and freely available at no charge.
 Useful links:
 
 - [Wiki](https://github.com/LWJGL/lwjgl3-wiki/wiki)
-- [Release Notes](https://github.com/LWJGL/lwjgl3/tree/master/doc/notes)
+- [Release Notes](https://github.com/LWJGL/lwjgl3/tree/master/doc/notes)  
 - [JavaDoc](https://javadoc.lwjgl.org)
 - [Blog](https://blog.lwjgl.org)
 
@@ -73,6 +40,8 @@ configuration options.
 
 ### Getting Started
 
+As of version `3.4.0` and JDK 25, LWJGL supports the FFM API and is fully functional when running with `--sun-misc-unsafe-memory-access=deny`. See the [FFM documentation](https://github.com/LWJGL/lwjgl3/blob/master/doc/FFM.md) for details.
+
 As of version `3.1.0`, LWJGL is distributed as a set of modules. Only the
 core module is required and all bindings are optional (but some bindings
 depend on other bindings). The easiest way to download LWJGL is to use the
@@ -85,10 +54,10 @@ developing.
 LWJGL can also be downloaded as a simple set of JAR files. Each module
 consists of the following files:
 
-- lwjgl-&lt;module&gt;.jar
-- lwjgl-&lt;module&gt;-sources.jar
-- lwjgl-&lt;module&gt;-javadoc.jar
-- lwjgl-&lt;module&gt;-natives-&lt;platform&gt;.jar (for some bindings)
+* lwjgl-&lt;module&gt;.jar
+* lwjgl-&lt;module&gt;-sources.jar
+* lwjgl-&lt;module&gt;-javadoc.jar
+* lwjgl-&lt;module&gt;-natives-&lt;platform&gt;.jar (for some bindings)
 
 To compile and run an LWJGL application, the base and natives JAR files of
 the core module and each binding used should be added to the classpath. LWJGL
@@ -101,9 +70,12 @@ class for more options.
 LWJGL 3 requires Java 8 or later to build and run and currently supports the
 following platforms/architectures:
 
+- FreeBSD x64
 - Linux x64
 - Linux arm64 (ARMv8/AArch64)
 - Linux arm32 (ARMv7/armhf)
+- Linux ppc64le
+- Linux riscv64
 - macOS x64
 - macOS arm64
 - Windows x64
@@ -139,94 +111,87 @@ improve the chances of a quick and useful response.
 
 #### Khronos APIs
 
-| Library                                               | Description                                                                                                                                                                                                    |
-| ----------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [EGL](https://www.khronos.org/egl)                    | An interface between Khronos rendering APIs such as OpenGL ES or OpenVG and the underlying native platform window system.                                                                                      |
-| [KTX (Khronos Texture)](https://www.khronos.org/ktx/) | A lightweight container for textures for OpenGL®, Vulkan® and other GPU APIs.                                                                                                                                  |
-| [OpenCL](https://www.khronos.org/opencl/)             | An open, royalty-free standard for cross-platform, parallel programming of diverse processors found in personal computers, servers, mobile devices and embedded platforms.                                     |
-| [OpenGL](https://www.khronos.org/opengl/)             | The most widely adopted 2D and 3D graphics API in the industry, bringing thousands of applications to a wide variety of computer platforms.                                                                    |
-| [OpenGL ES](https://www.khronos.org/opengles/)        | A royalty-free, cross-platform API for full-function 2D and 3D graphics on embedded systems - including consoles, phones, appliances and vehicles.                                                             |
-| [OpenXR](https://www.khronos.org/openxr/)             | A royalty-free, open standard that provides high-performance access to Augmented Reality (AR) and Virtual Reality (VR)—collectively known as XR—platforms and devices.                                         |
-| [Vulkan](https://www.khronos.org/vulkan/)             | A new generation graphics and compute API that provides high-efficiency, cross-platform access to modern GPUs used in a wide variety of devices from PCs and consoles to mobile phones and embedded platforms. |
+| Library| Description|
+|--------|------------|
+| [EGL](https://www.khronos.org/egl)| An interface between Khronos rendering APIs such as OpenGL ES or OpenVG and the underlying native platform window system.|
+| [KTX (Khronos Texture)](https://www.khronos.org/ktx/)| A lightweight container for textures for OpenGL®, Vulkan® and other GPU APIs.|
+| [OpenCL](https://www.khronos.org/opencl/)| An open, royalty-free standard for cross-platform, parallel programming of diverse processors found in personal computers, servers, mobile devices and embedded platforms.|
+| [OpenGL](https://www.khronos.org/opengl/)| The most widely adopted 2D and 3D graphics API in the industry, bringing thousands of applications to a wide variety of computer platforms.|
+| [OpenGL ES](https://www.khronos.org/opengles/)| A royalty-free, cross-platform API for full-function 2D and 3D graphics on embedded systems - including consoles, phones, appliances and vehicles.|
+| [OpenXR](https://www.khronos.org/openxr/)| A royalty-free, open standard that provides high-performance access to Augmented Reality (AR) and Virtual Reality (VR)—collectively known as XR—platforms and devices.|
+| [Vulkan](https://www.khronos.org/vulkan/)| A new generation graphics and compute API that provides high-efficiency, cross-platform access to modern GPUs used in a wide variety of devices from PCs and consoles to mobile phones and embedded platforms.|
 
 #### Display and Input
 
-| Library                                                                                     | Description                                                                                                                                                                                                                                |
-| ------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| [GLFW](https://www.glfw.org/)                                                               | Create multiple windows, handle user input (keyboard, mouse, gaming peripherals) and manage contexts. Also features multi-monitor support, clipboard access, file drag-n-drop, and [much more](http://www.glfw.org/docs/latest/news.html). |
-| [JAWT](http://docs.oracle.com/javase/8/docs/technotes/guides/awt/AWT_Native_Interface.html) | The AWT native interface.                                                                                                                                                                                                                  |
-| [Native File Dialog Extended](https://github.com/btzy/nativefiledialog-extended)            | A small C library that portably invokes native file open, folder select and file save dialogs.                                                                                                                                             |
-| [tinyfd](https://sourceforge.net/projects/tinyfiledialogs/)                                 | A native dialog library.                                                                                                                                                                                                                   |
+| Library| Description|
+|--------|------------|
+| [GLFW](https://www.glfw.org/)| Create multiple windows, handle user input (keyboard, mouse, gaming peripherals) and manage contexts. Also features multi-monitor support, clipboard access, file drag-n-drop, and [much more](http://www.glfw.org/docs/latest/news.html).|
+| [SDL](https://libsdl.org/)| Simple DirectMedia Layer is a cross-platform development library designed to provide low level access to audio, keyboard, mouse, joystick, and graphics hardware via OpenGL/Direct3D/Metal/Vulkan.|
+| [JAWT](http://docs.oracle.com/javase/8/docs/technotes/guides/awt/AWT_Native_Interface.html)| The AWT native interface.|
+| [Native File Dialog Extended](https://github.com/btzy/nativefiledialog-extended)| A small C library that portably invokes native file open, folder select and file save dialogs.|
+| [tinyfd](https://sourceforge.net/projects/tinyfiledialogs/)| A native dialog library.|
 
 #### Audio
 
-| Library                                 | Description                                                                                                            |
-| --------------------------------------- | ---------------------------------------------------------------------------------------------------------------------- |
-| [FMOD](https://www.fmod.com)            | An end-to-end solution for adding sound and music to any game.                                                         |
-| [OpenAL](https://www.openal.org/)       | A cross-platform 3D audio API appropriate for use with gaming applications and many other types of audio applications. |
-| [OpenAL Soft](https://openal-soft.org/) | An LGPL-licensed, cross-platform, software implementation of the OpenAL 3D audio API.                                  |
-| [Opus](https://opus-codec.org/)         | A totally open, royalty-free, highly versatile audio codec.                                                            |
+| Library| Description|
+|--------|------------|
+| [FMOD](https://www.fmod.com)| An end-to-end solution for adding sound and music to any game.|
+| [OpenAL](https://www.openal.org/)| A cross-platform 3D audio API appropriate for use with gaming applications and many other types of audio applications.|
+| [OpenAL Soft](https://openal-soft.org/)| An LGPL-licensed, cross-platform, software implementation of the OpenAL 3D audio API.|
+| [Opus](https://opus-codec.org/)| A totally open, royalty-free, highly versatile audio codec.|
 
 #### Graphics
 
-| Library                                                                                      | Description                                                                                                                                                                   |
-| -------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Assimp](https://www.assimp.org/)                                                            | A portable Open Source library to import various well-known 3D model formats in a uniform manner.                                                                             |
-| [bgfx](https://bkaradzic.github.io/bgfx/)                                                    | Cross-platform, graphics API agnostic, “Bring Your Own Engine/Framework” style rendering library, licensed under permissive BSD-2 clause open source license.                 |
-| [FreeType](https://freetype.org/)                                                            | A freely available software library to render fonts.                                                                                                                          |
-| [HarfBuzz](https://harfbuzz.github.io/)                                                      | A text shaping library that allows programs to convert a sequence of Unicode input into properly formatted and positioned glyph output — for any writing system and language. |
-| [meshoptimizer](https://github.com/zeux/meshoptimizer)                                       | A mesh optimization library that makes meshes smaller and faster to render.                                                                                                   |
-| [NanoSVG](https://github.com/memononen/nanosvg)                                              | A simple stupid SVG parser.                                                                                                                                                   |
-| [NanoVG](https://github.com/memononen/nanovg)                                                | A small antialiased vector graphics rendering library for OpenGL.                                                                                                             |
-| [Nuklear](https://github.com/vurtun/nuklear)                                                 | A minimal state immediate mode graphical user interface toolkit written in ANSI C and licensed under public domain.                                                           |
-| [par_octasphere](https://prideout.net/blog/octasphere)                                       | Generates triangle meshes for spheres, rounded boxes, and capsules.                                                                                                           |
-| [par_shapes](https://prideout.net/shapes)                                                    | Generate parametric surfaces and other simple shapes.                                                                                                                         |
-| [par_streamlines](https://prideout.net/blog/par_streamlines/)                                | Triangulate wide lines and curves.                                                                                                                                            |
-| [Shaderc](https://github.com/google/shaderc)                                                 | A collection of libraries for shader compilation.                                                                                                                             |
-| [SPIRV-Cross](https://github.com/KhronosGroup/SPIRV-Cross)                                   | A library for performing reflection on SPIR-V and disassembling SPIR-V back to high level languages.                                                                          |
-| [Tiny OpenEXR](https://github.com/syoyo/tinyexr)                                             | A small, single header-only library to load and save OpenEXR(.exr) images.                                                                                                    |
-| [Tootle (AMD)](https://github.com/GPUOpen-Tools/amd-tootle)                                  | A 3D triangle mesh optimization library that improves on existing mesh preprocessing techniques.                                                                              |
-| [Vulkan Memory Allocator](https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator) | An easy to integrate Vulkan memory allocation library.                                                                                                                        |
-| [Yoga](https://facebook.github.io/yoga/)                                                     | An open-source, cross-platform layout library that implements Flexbox.                                                                                                        |
-
-#### AR/VR
-
-| Library                                               | Description                                                                                                                                                                |
-| ----------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [LibOVR](https://developer.oculus.com/documentation/) | The API of the Oculus SDK.                                                                                                                                                 |
-| [OpenVR](https://github.com/ValveSoftware/openvr)     | An API and runtime that allows access to VR hardware from multiple vendors without requiring that applications have specific knowledge of the hardware they are targeting. |
+| Library| Description|
+|--------|------------|
+| [Assimp](https://www.assimp.org/)| A portable Open Source library to import various well-known 3D model formats in a uniform manner.|
+| [bgfx](https://bkaradzic.github.io/bgfx/)| Cross-platform, graphics API agnostic, “Bring Your Own Engine/Framework” style rendering library, licensed under permissive BSD-2 clause open source license.|
+| [FreeType](https://freetype.org/)| A freely available software library to render fonts.|
+| [HarfBuzz](https://harfbuzz.github.io/)| A text shaping library that allows programs to convert a sequence of Unicode input into properly formatted and positioned glyph output — for any writing system and language.|
+| [meshoptimizer](https://github.com/zeux/meshoptimizer)| A mesh optimization library that makes meshes smaller and faster to render.|
+| [msdfgen](https://github.com/Chlumsky/msdfgen)| A multi-channel signed distance field generator.|
+| [NanoSVG](https://github.com/memononen/nanosvg)| A simple stupid SVG parser.|
+| [NanoVG](https://github.com/memononen/nanovg)| A small antialiased vector graphics rendering library for OpenGL.|
+| [Nuklear](https://github.com/vurtun/nuklear)| A minimal state immediate mode graphical user interface toolkit written in ANSI C and licensed under public domain.|
+| [par_octasphere](https://prideout.net/blog/octasphere)| Generates triangle meshes for spheres, rounded boxes, and capsules.|
+| [par_shapes](https://prideout.net/shapes)| Generate parametric surfaces and other simple shapes.|
+| [par_streamlines](https://prideout.net/blog/par_streamlines/)| Triangulate wide lines and curves.|
+| [Shaderc](https://github.com/google/shaderc)| A collection of libraries for shader compilation.|
+| [SPIRV-Cross](https://github.com/KhronosGroup/SPIRV-Cross)| A library for performing reflection on SPIR-V and disassembling SPIR-V back to high level languages.|
+| [Tiny OpenEXR](https://github.com/syoyo/tinyexr)| A small, single header-only library to load and save OpenEXR(.exr) images.|
+| [Vulkan Memory Allocator](https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator)| An easy to integrate Vulkan memory allocation library.|
+| [Yoga](https://facebook.github.io/yoga/)| An open-source, cross-platform layout library that implements Flexbox.|
 
 #### [stb](https://github.com/nothings/stb) - single-file public domain libraries for C/C++
 
-| Library          | Description                                                                     |
-| ---------------- | ------------------------------------------------------------------------------- |
-| stb_easy_font    | Quick-and-dirty easy-to-deploy bitmap font for printing frame rate, etc.        |
-| stb_image        | Image loading/decoding from file/memory: JPG, PNG, TGA, BMP, PSD, GIF, HDR, PIC |
-| stb_image_resize | Resize images larger/smaller with good quality.                                 |
-| stb_image_write  | Image writing to disk: PNG, TGA, BMP                                            |
-| stb_perlin       | Revised Perlin noise (3D input, 1D output).                                     |
-| stb_rect_pack    | Simple 2D rectangle packer with decent quality.                                 |
-| stb_truetype     | Parse, decode, and rasterize characters from truetype fonts.                    |
-| stb_vorbis       | Decode ogg vorbis files from file/memory to float/16-bit signed output.         |
+| Library| Description|
+|--------|------------|
+| stb_easy_font| Quick-and-dirty easy-to-deploy bitmap font for printing frame rate, etc.|
+| stb_image| Image loading/decoding from file/memory: JPG, PNG, TGA, BMP, PSD, GIF, HDR, PIC|
+| stb_image_resize| Resize images larger/smaller with good quality.|
+| stb_image_write| Image writing to disk: PNG, TGA, BMP|
+| stb_perlin| Revised Perlin noise (3D input, 1D output).|
+| stb_rect_pack| Simple 2D rectangle packer with decent quality.|
+| stb_truetype| Parse, decode, and rasterize characters from truetype fonts.|
+| stb_vorbis| Decode ogg vorbis files from file/memory to float/16-bit signed output.|
 
 #### Other
 
-| Library                                                                                     | Description                                                                                                                                                                                              |
-| ------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [CUDA](https://developer.nvidia.com/cuda-zone/)                                             | A parallel computing platform and programming model developed by NVIDIA for general computing on GPUs.                                                                                                   |
-| [hwloc](https://www.open-mpi.org/projects/hwloc/)                                           | A portable abstraction of the hierarchical topology of modern architectures, including NUMA memory nodes, sockets, shared caches, cores and simultaneous multithreading.                                 |
-| [jemalloc](https://jemalloc.net/)                                                           | A general purpose malloc implementation that emphasizes fragmentation avoidance and scalable concurrency support.                                                                                        |
-| [libffi](https://sourceware.org)                                                            | A portable, high level programming interface to various calling conventions.                                                                                                                             |
-| [libdivide](https://libdivide.com/)                                                         | A library that replaces expensive integer divides with comparatively cheap multiplication and bitshifts.                                                                                                 |
-| [LLVM](https://llvm.org/)                                                                   | A collection of modular and reusable compiler and toolchain technologies.                                                                                                                                |
-| [LMDB](https://www.symas.com/lmdb)                                                          | An extraordinarily fast, memory-efficient database. With memory-mapped files, it has the read performance of a pure in-memory database while retaining the persistence of standard disk-based databases. |
-| [LZ4](https://lz4.org/)                                                                     | A lossless data compression algorithm that is focused on compression and decompression speed.                                                                                                            |
-| [Meow hash](https://github.com/cmuratori/meow_hash)                                         | An extremely fast non-cryptographic hash.                                                                                                                                                                |
-| [ODBC](https://docs.microsoft.com/en-us/sql/odbc/microsoft-open-database-connectivity-odbc) | A C programming language interface that makes it possible for applications to access data from a variety of database management systems (DBMSs).                                                         |
-| [Remotery](https://github.com/Celtoys/Remotery)                                             | A realtime CPU/GPU profiler hosted in a single C file with a viewer that runs in a web browser.                                                                                                          |
-| [rpmalloc](https://github.com/mjansson/rpmalloc)                                            | A public domain cross platform lock free thread caching 16-byte aligned memory allocator implemented in C.                                                                                               |
-| [xxHash](https://github.com/Cyan4973/xxHash)                                                | An Extremely fast Hash algorithm, running at RAM speed limits.                                                                                                                                           |
-| [Zstandard](http://facebook.github.io/zstd/) (zstd)                                         | A fast lossless compression algorithm, targeting real-time compression scenarios at zlib-level and better compression ratios.                                                                            |
+| Library| Description|
+|--------|------------|
+| [hwloc](https://www.open-mpi.org/projects/hwloc/)| A portable abstraction of the hierarchical topology of modern architectures, including NUMA memory nodes, sockets, shared caches, cores and simultaneous multithreading.|
+| [jemalloc](https://jemalloc.net/)| A general purpose malloc implementation that emphasizes fragmentation avoidance and scalable concurrency support.|
+| [libffi](https://sourceware.org)| A portable, high level programming interface to various calling conventions.|
+| [libspng](https://libspng.org/)| libspng (simple png) is a C library for reading and writing Portable Network Graphics (PNG) format files with a focus on security and ease of use.|
+| [LLVM](https://llvm.org/)| A collection of modular and reusable compiler and toolchain technologies.|
+| [LMDB](https://www.symas.com/lmdb)| An extraordinarily fast, memory-efficient database. With memory-mapped files, it has the read performance of a pure in-memory database while retaining the persistence of standard disk-based databases.|
+| [LZ4](https://lz4.org/)| A lossless data compression algorithm that is focused on compression and decompression speed.|
+| [ODBC](https://docs.microsoft.com/en-us/sql/odbc/microsoft-open-database-connectivity-odbc)| A C programming language interface that makes it possible for applications to access data from a variety of database management systems (DBMSs).|
+| [Remotery](https://github.com/Celtoys/Remotery)| A realtime CPU/GPU profiler hosted in a single C file with a viewer that runs in a web browser.|
+| [RenderDoc](https://renderdoc.org)| An API to control the RenderDoc GPU debugger.|
+| [rpmalloc](https://github.com/mjansson/rpmalloc)| A public domain cross platform lock free thread caching 16-byte aligned memory allocator implemented in C.|
+| [xxHash](https://github.com/Cyan4973/xxHash)| An Extremely fast Hash algorithm, running at RAM speed limits.|
+| [Zstandard](http://facebook.github.io/zstd/) (zstd)| A fast lossless compression algorithm, targeting real-time compression scenarios at zlib-level and better compression ratios.|
 
 Use of a binding is subject to the terms of the [corresponding license](https://github.com/LWJGL/lwjgl3/tree/master/doc/3rdparty).
 
